Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gst-editing-services
gst-editing-services
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 77
    • Issues 77
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 10
    • Merge Requests 10
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-editing-servicesgst-editing-services
  • Issues
  • #96

Closed
Open
Opened Mar 11, 2020 by Jackson Eickhoff@Jacksoneick

nlesource: assertion when seeked while removed from the composition during stack activation

When I drag a clip onto the timeline; then drag it off the timeline on the left side; then once again place it on the timeline and drop it Pitivi will crash.

It has been found that removing the line object->in_composition = FALSE; from the nle_composition_remove_object function in nlecomposition.c is a temporary fix to stop Pitivi from crashing.

To reproduce:

  1. Select a clip and drag it over the timeline.
  2. Drag the clip off of the timeline to the left border.
  3. Drag the clip in the other direction and then place it on the timeline.

If clarification is needed on how to reproduce the bug, I can screen record the steps.

Attached is the log from GST_DEBUG.log.tar.xz

Stack trace:

#0  0x00007ffff7e3c605 in raise () at /usr/lib/x86_64-linux-gnu/libc.so.6
#1  0x00007ffff7e25899 in abort () at /usr/lib/x86_64-linux-gnu/libc.so.6
#2  0x00007ffff701cb33 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ffff70791bf in g_assertion_message_expr () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fffe2bc9d1e in ghost_seek_pad (source=0x7fff9cf80db0, user_data=<optimized out>) at ../plugins/nle/nlesource.c:462
        priv = 0x7fff9cf80d40
        __func__ = "ghost_seek_pad"
#5  0x00007ffff536f132 in gst_element_call_async_func (data=0x7fffd8003f60, user_data=<optimized out>) at ../gst/gstelement.c:3771
        async_data = 0x7fffd8003f60
#6  0x00007ffff707a6e4 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007ffff7079fa1 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007ffff7ae45e2 in  () at /usr/lib/x86_64-linux-gnu/libpthread.so.0
#9  0x00007ffff7f01413 in clone () at /usr/lib/x86_64-linux-gnu/libc.so.6
Edited Mar 11, 2020 by Thibault Saunier
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: gstreamer/gst-editing-services#96